# LiveWorld

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  nginx.conf
.cargo/: config.toml
.github/workflows/: ci.yml  keepalive.yml
.harness/: state.md
benches/: actor_ipc.rs  broadcast.rs
hf-space/: Dockerfile  README.md
k6/: load_test.js
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  logging.yaml  namespace.yaml  nginx.yaml  redis.yaml  secret.yaml  service.yaml
src/: actor.rs  actor_runtime.rs  agent_decision.rs  auth.rs  circuit_breaker.rs  engine_api.rs  global_agents.rs  interest_manager.rs  jwt.rs  lib.rs  llm_adapter.rs  main.rs  metrics.rs  persistence.rs  redis_sync.rs  semantic_cache.rs  shard.rs  spatial_grid.rs  spsc_queue.rs  state_encoder.rs  types.rs  world_engine.rs  ws_server.rs
static/: index.html
tests/: ws_integration.rs
